syntax = "proto3";

option objc_class_prefix = "rapydbot";

package wallet;

service Wallet {
  rpc CreateWallet (CreateWalletRequest) returns (CreateWalletReply) {}
  rpc TopUpWallet (TopUpWalletRequest) returns (TopUpWalletReply) {}
}

message CreateWalletRequest {
  string user_id = 1;
}

message CreateWalletReply {
  string rapyd_ewallet_address = 1;
}

message TopUpWalletRequest {
  string user_id = 1;
  string country = 2;
  string currency = 3;
  float amount = 4;
}

message TopUpWalletReply {
  string checkout_page_url = 1;
}

message EmptyReply {}